ドメイン駆動用に構成を変更